[gd_scene load_steps=4 format=3 uid="uid://wk0aqjw62wi0o"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/time_series_analysis/TimeSeriesAnalysis.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="TimeSeriesAnalysis" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="InputTimeSeries" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="TimeSeriesData" type="Node3D" parent="InputTimeSeries"]

[node name="InputLabel" type="CSGBox3D" parent="InputTimeSeries"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="AnalysisEngine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="EngineCore" type="CSGBox3D" parent="AnalysisEngine"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="EngineLabel" type="CSGBox3D" parent="AnalysisEngine"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="AnalysisMethods" type="Node3D" parent="AnalysisEngine"]

[node name="TrendAnalysisCore" type="CSGSphere3D" parent="AnalysisEngine/AnalysisMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="SeasonalityCore" type="CSGSphere3D" parent="AnalysisEngine/AnalysisMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="ForecastingCore" type="CSGSphere3D" parent="AnalysisEngine/AnalysisMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="OutputForecast" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="ForecastData" type="Node3D" parent="OutputForecast"]

[node name="ForecastLabel" type="CSGBox3D" parent="OutputForecast"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="TimeAxis" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="TimeAxisCore" type="CSGBox3D" parent="TimeAxis"]
size = Vector3(8, 0.2, 0.2)
material_override = SubResource("StandardMaterial3D_2")

[node name="TimeAxisLabel" type="CSGBox3D" parent="TimeAxis"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="AnalysisMetrics" type="Node3D" parent="."]

[node name="AccuracyMeter" type="Node3D" parent="AnalysisMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="AccuracyBase" type="CSGBox3D" parent="AnalysisMetrics/AccuracyMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="AccuracyIndicator" type="CSGSphere3D" parent="AnalysisMetrics/AccuracyMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="ForecastHorizonMeter" type="Node3D" parent="AnalysisMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="HorizonBase" type="CSGBox3D" parent="AnalysisMetrics/ForecastHorizonMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="HorizonIndicator" type="CSGSphere3D" parent="AnalysisMetrics/ForecastHorizonMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
